objects/Loan_Officer_Onboarding_Quiz__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Guaranteed_Rate_Onboarding_Quizzes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Question_10__c</fullName>
        <description>Which of the following loan details from partnering lenders does a FirstREX Program Specialist share with prospective clients?</description>
        <label>Question #10</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mortgage Rates and Loan Program Terms</fullName>
                </value>
                <value>
                    <fullName>Mortgage Rates and Fees</fullName>
                </value>
                <value>
                    <fullName>FirstREX Program Specialists do not provide specific loan terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <description>Which of the following statements about the REX Homebuyer program is NOT true?</description>
        <label>Question #1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>The money from us is not a loan, it's a co-investment in the property. We are your client’s partner.</fullName>
                </value>
                <value>
                    <fullName>Your client won’t pay any monthly payments or interest to us while they live in their home.</fullName>
                </value>
                <value>
                    <fullName>As their partner, we hope to earn a return on our investment when the property increases in value and they earn a profit.</fullName>
                </value>
                <value>
                    <fullName>Your client is in control. They make all the decisions about the home—when to buy, when to sell, or if they want to buy us out.</fullName>
                </value>
                <value>
                    <fullName>They can buy us out at any time.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_2__c</fullName>
        <description>Which of the following is NOT a typical reason a client would choose to use REX Homebuyer?</description>
        <label>Question #2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Increase their purchasing power without increasing their monthly payment</fullName>
                </value>
                <value>
                    <fullName>Reserving cash to pay for home improvements</fullName>
                </value>
                <value>
                    <fullName>Reduce their monthly payment</fullName>
                </value>
                <value>
                    <fullName>Income qualify for the home</fullName>
                </value>
                <value>
                    <fullName>All of these are typical reasons clients choose REX Homebuyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loan Officer Onboarding Quiz</label>
    <nameField>
        <label>Loan Officer Onboarding Quiz</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Officer Onboarding Quizzes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>